# sklep-kasa

./: CMakeLists.txt  README.md
app/appBin/: sklep_kasa
app/data/: products.csv
data/: invalid_rows.csv  products.csv  test_products.csv
include/: Basket.h  Data.h  Product.h  Shop.h
src/: Basket.cpp  Data.cpp  Product.cpp  Shop.cpp  main.cpp
tests/: BasketTest.cpp  DataTest.cpp  ShopTest.cpp
